--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,6 +2,31 @@
   "welcomePage": {
     "tittle_part1": "Добро пожаловать в наше приложение.",
     "tittle_part2": "Надеемся, вам понравится."
+  },
+  "developers": {
+    "anton": {
+      "name": "Антон",
+      "position": "FRONT-END РАЗРАБОТЧИК",
+      "task1": "Авторизация",
+      "task2": "Страницы входа/регистрации",
+      "task3": "Локализация",
+      "description": "Приветствую, меня зовут Антон Запруцкий. Я из Беларуси. Я окончил БНТУ, факультет информационных технологий и робототехники. В настоящее время я учусь в RS School. Учеба приносит мне удовольствие, я наслаждаюсь поиском новых способов совершенствования себя."
+    },
+    "maksim": {
+      "name": "Максим",
+      "position": "FRONT-END РАЗРАБОТЧИК",
+      "task1": "Главная страница",
+      "description": "Привет всем! Моя основная цель - стать front-end разработчиком. У меня есть некоторый опыт с 2021 года (1 квартал). Я готов снова усердно работать, изучать новые технологии и продолжать своё развитие."
+    },
+    "julia": {
+      "name": "Юля",
+      "position": "FRONT-END РАЗРАБОТЧИК",
+      "task1": "Приветственная страница",
+      "task2": "404 страница",
+      "task3": "Заголовок (Header)",
+      "task4": "Нижний колонтитул (Footer)",
+      "description": "Привет, меня зовут Юлия. Я самоучка в области front-end разработки. Моя основная цель - написание чистого, элегантного и эффективного кода. Я владею HTML, CSS, SCSS, JavaScript и TypeScript."
+    }
   }
 }
 
