feat: add localization for header buttons

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -27,6 +27,12 @@
       "task4": "Нижний колонтитул (Footer)",
       "description": "Привет, меня зовут Юлия. Я самоучка в области front-end разработки. Моя основная цель - написание чистого, элегантного и эффективного кода. Я владею HTML, CSS, SCSS, JavaScript и TypeScript."
     }
+  },
+  "buttons": {
+    "main": "перейти на главную",
+    "signin": "войти",
+    "signup": "зарегистрироваться",
+    "logout": "выйти"
   }
 }
 
