fix: fix conflict

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,7 +1,6 @@
 {
   "welcomePage": {
-    "tittle_part1": "Добро пожаловать в наше приложение.",
-    "tittle_part2": "Надеемся, вам понравится."
+    "description": "GraphQL IDE - это интегрированная среда разработки (IDE) для работы с GraphQL. Это мощный и просто потрясающий инструмент, который вы будете часто использовать при создании веб-сайтов с использованием Gatsby. Он предлагает подсветку синтаксиса, автозаполнение интеллектуального анализа, автоматическую документацию и многое другое."
   },
   "developers": {
     "anton": {
