--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,7 +1,6 @@
 {
   "welcomePage": {
-    "tittle_part1": "Welcome to our app.",
-    "tittle_part2": "We hope you enjoy it."
+    "description": "the GraphQL integrated development environment (IDE). It’s a powerful (and all-around awesome) tool you’ll use often while building Gatsby websites. It offers syntax highlighting, intellisense autocompletion, automatic documentation, and much more."
   },
   "developers": {
     "anton": {
