--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -52,6 +52,14 @@
       "tittle": "Создать аккаунт",
       "button": "Зарегистрироваться"
     }
+  },
+  "validateMessages": {
+    "required": "поле является обязательным",
+    "oneLetterCheck": "требуется 1+ буква",
+    "oneDigitCheck": "требуется 1+ цифра",
+    "oneSpecCheck": "требуется 1+ спец символ",
+    "min8sym": "требуется 8+ символов",
+    "emailCheck": "некорректная почта"
   }
 }
 
