--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -66,7 +66,8 @@
     "auth/missing-password": "please enter your password",
     "auth/wrong-password": "wrong password",
     "auth/too-many-requests": "too many requests",
-    "auth/user-not-found": "user not found"
+    "auth/user-not-found": "user not found",
+    "auth/email-already-in-use": "email already in use"
   }
 }
 
