--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,6 +9,7 @@
       "task1": "Авторизация",
       "task2": "Страницы входа/регистрации",
       "task3": "Локализация",
+      "task4": "Схема",
       "description": "Приветствую, меня зовут Антон Запруцкий. Я из Беларуси. Я окончил БНТУ, факультет информационных технологий и робототехники. В настоящее время я учусь в RS School. Учеба приносит мне удовольствие, я наслаждаюсь поиском новых способов совершенствования себя."
     },
     "maksim": {
