fix: merge conflicts

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -71,7 +71,7 @@
     "auth/email-already-in-use": "этот адрес электронный почты уже используется"
   },
   "editor": {
-    "responsePlaceholder": "нажмите кнопку 'воспроизвести', чтобы получить ответ",
+    "responsePlaceholder": "нажмите кнопку 'выполнить', чтобы получить ответ",
     "variables": "переменные",
     "headers": "заголовки",
     "tab": "вкладка",
